added new tut11

--- a/tutorial011-Numpy-Introduction.ipynb
+++ b/tutorial011-Numpy-Introduction.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "id": "75af8e7c",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "id": "44e6b598",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "array([ 8.3 ,  8.74, 13.5 , 19.13, 18.7 , 14.31])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "id": "29ebb25a",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "array([12.6  , 17.584, 31.5  , 89.04 , 76.2  , 43.1  ])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "f5d9f101",
    "metadata": {},
    "outputs": [
@@ -1015,13 +1015,13 @@
        "       [ 2.  ,  3.14, 10.5 ]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twoDarr[:,0:3]"
+    "twoDarr[:,0:3] #give me all the rows and the first 3 columns "
    ]
   },
   {
@@ -1061,7 +1061,7 @@
    ],
    "source": [
     "# the last row (regardless of the number of rows, \n",
-    "# again you do not need to knowhow many rows exist)\n",
+    "# again you do not need to know how many rows exist)\n",
     "twoDarr[-1,:] "
    ]
   },
@@ -1259,7 +1259,7 @@
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
     "  - How many methods does a numpy array have? \n",
-    "  \n",
+    "  7. \n",
     "  - Create a new 2-dimensional array, and show the use of two methods not used above (`prod` and `round` could be two simple ones, but no pressure):\n",
     "  \n",
     "  [Use the cell below to show how to create and add the two arrays]\n",
@@ -1269,11 +1269,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "de1d9b1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1, 2, 3]), array([4, 5, 6]), array([7, 8, 9])]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array_split?\n",
+    "x = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "np.array_split (x, 3) #this method splits the array into multiple sub-arrays of equal size. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "19cca4be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array_equiv?\n",
+    "a1 = [1,2]\n",
+    "a2 = [1,2]\n",
+    "np.array_equiv (a1, a2) #this method returns true if input arrays both have the same shape and have equal elements"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1379,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 86,
    "id": "531a6494",
    "metadata": {},
    "outputs": [
@@ -1387,21 +1426,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.44186122]\n",
-      " [-0.51325543]\n",
-      " [-2.06286279]\n",
-      " [ 0.28754131]\n",
-      " [ 0.58818521]\n",
-      " [ 0.44430928]\n",
-      " [-0.02731224]\n",
-      " [-0.61390154]\n",
-      " [-0.17771911]\n",
-      " [ 0.36438193]]\n"
+      "[[-1.33981128]\n",
+      " [ 0.14041149]\n",
+      " [ 0.29547726]\n",
+      " [ 1.33767397]\n",
+      " [-0.43857766]\n",
+      " [ 0.02615589]\n",
+      " [-1.23488129]\n",
+      " [ 1.07896426]\n",
+      " [ 1.6166351 ]\n",
+      " [ 0.16433191]]\n"
      ]
     }
    ],
    "source": [
-    "myRandomNumArray = np.random.randn(10,1)\n",
+    "myRandomNumArray = np.random.randn(10,1) # 10 rows, 1 column --> 1D array \n",
     "print(myRandomNumArray)"
    ]
   },
@@ -1427,11 +1466,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "619a3b7a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.33310116]\n",
+      " [-0.79139077]\n",
+      " [ 0.27417278]\n",
+      " [-0.51490992]\n",
+      " [-1.7110712 ]\n",
+      " [ 0.61229731]\n",
+      " [ 1.10012937]\n",
+      " [ 0.56435253]\n",
+      " [-0.71279944]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myRandomNumArray = np.random.randn (9,1)\n",
+    "print(myRandomNumArray)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1446,11 +1504,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "0e4e7eb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.26085948  0.54842807]\n",
+      " [ 0.60319905  1.00686114]\n",
+      " [-0.29442601 -1.42088052]\n",
+      " [-0.67894677  0.53388481]\n",
+      " [ 0.7439744   2.22504964]\n",
+      " [ 0.11718142  0.24461452]\n",
+      " [-0.17729882 -0.40572953]\n",
+      " [ 0.78177519  0.35347761]\n",
+      " [-0.20727949 -1.07969738]\n",
+      " [-0.12306983 -0.39098219]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myRandomNumArray2 = np.random.randn (10,2)\n",
+    "print(myRandomNumArray2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1462,12 +1540,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 95,
    "id": "8c45aea8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "size  = 20\n",
+    "size  = 20 \n",
     "origArray = np.random.randn(size,1)"
    ]
   },
@@ -1481,10 +1559,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "60b2c57b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.25517373]\n",
+      " [ 0.94712608]\n",
+      " [-1.02231069]\n",
+      " [ 1.16716837]\n",
+      " [-0.57197681]\n",
+      " [ 0.1331375 ]\n",
+      " [ 1.20274387]\n",
+      " [-1.02475297]\n",
+      " [ 0.16039916]\n",
+      " [-1.13047529]\n",
+      " [-1.94129968]\n",
+      " [ 0.98659782]\n",
+      " [ 0.02822737]\n",
+      " [-0.8223676 ]\n",
+      " [-1.58655176]\n",
+      " [-0.40147282]\n",
+      " [ 1.34217928]\n",
+      " [ 0.40246909]\n",
+      " [-0.37276142]\n",
+      " [-0.67202344]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(origArray)"
    ]
@@ -1507,10 +1612,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "6cb0b1d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The mean is:', -0.09603850988573367]\n",
+      "['the STD is:', 0.9872224672452632]\n"
+     ]
+    }
+   ],
    "source": [
     "mean = np.mean(origArray)\n",
     "sd = np.std(origArray)\n",
@@ -1540,11 +1654,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "c8db274a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.81522068  0.0643194  -0.16640537 -0.94070977 -0.0535945   1.1011362\n",
+      "  0.37212255 -0.88346099  1.15805157 -1.20365349  0.20983914 -0.89118692\n",
+      " -0.78268775  1.07973068 -0.46284089 -1.51507568 -0.53871853  0.75662186\n",
+      " -0.72939922  1.21478265  1.00828297  0.07328301  1.17373241  1.86295167\n",
+      " -1.9836365   1.15668893  0.60928227 -0.32320123  0.66414561  0.39672599\n",
+      " -0.57611686  1.48821839  0.14024687  1.18831675 -0.24574539 -1.63558662\n",
+      "  0.24479809 -0.23508223 -1.26082781 -1.69196793  0.61645092  1.26969128\n",
+      "  1.39733798  0.53422496  0.00410204  0.18941984  0.04477469  0.79468527\n",
+      " -0.49314074 -1.26158974 -0.21926026  0.19727222 -0.25528045  0.02580759\n",
+      "  2.20096644  0.8843676  -1.38682253  0.65366231 -2.17660863  0.61894892\n",
+      "  0.4772343   0.02609653 -0.96970567 -0.98372812  0.41253272 -0.61430485\n",
+      "  0.83708178 -0.62361901 -0.3631862   0.75947133 -0.033927   -0.16640069\n",
+      "  0.26957242  0.37530555 -0.08391524  0.22612635 -0.11588073  0.41160241\n",
+      "  0.28781043  0.50427148  0.80426736 -1.03060821 -1.35769756 -0.26650187\n",
+      " -0.1712928   0.46238555 -1.21985553  0.19257284  0.43545039 -1.63494414\n",
+      "  0.43493727  1.39781939  0.12466678 -0.8914514  -0.57689334 -0.07494887\n",
+      " -0.52177645 -3.20440134  1.46271099 -0.46690262]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.random.randn(100)\n",
+    "print(array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1557,10 +1698,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "e798b23e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The mean is:', -0.011724160682246602]\n",
+      "['the STD is:', 0.9365839569881778]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = np.mean(array)\n",
+    "sd = np.std(array)\n",
+    "print(['The mean is:', mean])\n",
+    "print(['the STD is:', sd])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "71a3bdb7",
    "metadata": {},
-   "source": []
+   "source": [
+    "The mean and standard deviation values are further away from the expected values. As sample size increases, the standard deviation decreases because the standard deviation is calcuated by original distribution divided by the square root of the sample size. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1572,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "57e99de9",
    "metadata": {},
    "outputs": [],
@@ -1582,10 +1747,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "0ee8c164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.25517373]\n",
+      " [5.94712608]\n",
+      " [3.97768931]\n",
+      " [6.16716837]\n",
+      " [4.42802319]\n",
+      " [5.1331375 ]\n",
+      " [6.20274387]\n",
+      " [3.97524703]\n",
+      " [5.16039916]\n",
+      " [3.86952471]\n",
+      " [3.05870032]\n",
+      " [5.98659782]\n",
+      " [5.02822737]\n",
+      " [4.1776324 ]\n",
+      " [3.41344824]\n",
+      " [4.59852718]\n",
+      " [6.34217928]\n",
+      " [5.40246909]\n",
+      " [4.62723858]\n",
+      " [4.32797656]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(x)"
    ]
@@ -1600,10 +1792,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
+   "id": "3821199b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.19207701977146735\n",
+      "1.9744449344905264\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = np.mean(x)\n",
+    "print (mean) \n",
+    "std = np.std(x)\n",
+    "print(std) #std is closer to 2, because we added a large number which increased the mean "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "id": "a462f822",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.51034746]\n",
+      " [ 1.89425216]\n",
+      " [-2.04462138]\n",
+      " [ 2.33433674]\n",
+      " [-1.14395363]\n",
+      " [ 0.26627499]\n",
+      " [ 2.40548775]\n",
+      " [-2.04950593]\n",
+      " [ 0.32079833]\n",
+      " [-2.26095057]\n",
+      " [-3.88259936]\n",
+      " [ 1.97319563]\n",
+      " [ 0.05645473]\n",
+      " [-1.6447352 ]\n",
+      " [-3.17310352]\n",
+      " [-0.80294564]\n",
+      " [ 2.68435857]\n",
+      " [ 0.80493819]\n",
+      " [-0.74552283]\n",
+      " [-1.34404687]]\n"
+     ]
+    }
+   ],
    "source": [
     "x  = 2 * origArray\n",
     "print(x)"
@@ -1615,6 +1856,25 @@
    "metadata": {},
    "source": [
     "It looks like the values increased. There seem to be a larger variality, more bigger numbers, both negative and positive. So perhaps the STD is not at 1 anymore. Could it be at 2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "b7d0e8c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9872224672452632\n"
+     ]
+    }
+   ],
+   "source": [
+    "std = np.std(origArray)\n",
+    "print(std)"
    ]
   },
   {
@@ -1631,11 +1891,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "dbd75e7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.19207701977146735\n",
+      "1.9744449344905264\n",
+      "-0.3445340491377475\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = np.mean(x)\n",
+    "print (mean)\n",
+    "std = np.std(x)\n",
+    "print(std)\n",
+    "median = np.median(x)\n",
+    "print(median)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1645,14 +1922,9 @@
     "  \n",
     "  - What are the mean, std and median of `x`? Why, what is going on here?\n",
     "  \n",
-    "  [Use the cell below to show answer in your own words]"
+    "The mean is -0.19207701977146735, the std is 1.9744449344905264, and the median is -0.3445340491377475. \n",
+    "The mean and std are not close to 0 and 1. This is because 5 was added to the array. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c595912",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1730,8 +2002,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "7f0ea518",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "1.5811388300841898\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [8, 12, 11, 9]\n",
+    "mean = np.mean(x)\n",
+    "print(mean)\n",
+    "std = np.std(x)\n",
+    "print(std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "505b12d5",
    "metadata": {},
    "outputs": [],
    "source": []
