--- a/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
+++ b/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d2315344",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d47d39bd",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2cfdaae0",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,8 +106,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "41f5e30e",
+   "cell_type": "markdown",
+   "id": "6946ef0a",
    "metadata": {},
    "source": [
     "Ok, that means that the array has one dimension (the first, as the second after the coma is empty) and the size of the dimension is `3`. "
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "e1447887",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "2f044e02",
    "metadata": {},
    "outputs": [
@@ -153,13 +153,13 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twoDarray.shape"
+    "twoDarray.shape "
    ]
   },
   {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4a9ce594",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w6/hzgmtvzj5v77wvm2wyhg_kvr0000gn/T/ipykernel_98928/2566889011.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/var/folders/w6/hzgmtvzj5v77wvm2wyhg_kvr0000gn/T/ipykernel_44495/2566889011.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  twoDarray = np.array([(1, 2, 3), (4, 5, 6, 7)])\n"
      ]
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "62b3e3af",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "array([(1, 2, 3, 1, 2, 3), (4, 5, 6, 7, 4, 5, 6, 7)], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "945b46ec",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "       [24, 48, 96]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,12 +304,14 @@
    "id": "2bb5cdae",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "The functions `np.zeros()` and `np.ones()` allow creating arrays with the proper dimensions. Whereas the first initializes an array with, ahem, zeros inside, the second, well you know the drill... Let's see how to use them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "dec0aba8",
    "metadata": {
     "scrolled": true
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d91a655f",
    "metadata": {},
    "outputs": [
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bdfc3f17",
    "metadata": {},
    "outputs": [
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "07f2a38c",
    "metadata": {},
    "outputs": [
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "32a0b6e0",
    "metadata": {},
    "outputs": [
@@ -433,7 +435,7 @@
        "2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f452fc18",
    "metadata": {},
    "outputs": [
@@ -462,13 +464,13 @@
        "(2, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myArray.shape"
+    "myArray.shape # (rows, columns)"
    ]
   },
   {
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6803edad",
    "metadata": {},
    "outputs": [
@@ -491,18 +493,18 @@
        "10"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myArray.size"
+    "myArray.size "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "ea8cad6f",
    "metadata": {},
    "outputs": [],
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "b743f098",
    "metadata": {},
    "outputs": [
@@ -546,12 +548,12 @@
    ],
    "source": [
     "myArray = ([[1, 6], [8, 12], [4, 2]]) #this array has a size of: [3, 2]\n",
-    "print(len(myArray))"
+    "print(len(myArray)) # this method tells us the number of dimensions in an array "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "e997ce7e",
    "metadata": {},
    "outputs": [
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e1b37a43",
    "metadata": {},
    "outputs": [
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "c2ddf1f1",
    "metadata": {},
    "outputs": [
@@ -650,7 +652,8 @@
     }
    ],
    "source": [
-    "threeDarray = [[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2, 2]]\n",
+    "\n",
+    "threeDarray = [[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2 ,2]]\n",
     "print (threeDarray)"
    ]
   },
@@ -661,9 +664,7 @@
    "source": [
     "Let's think how we can start filling up arrays with data. \n",
     "\n",
-    "One great thing about `for` loops is that we can use them to go through the rows or columns of an array (or both!) in turn, repeating some operation on each one. Let's say we need to put the numbers of the binary sequence (2, 4, 8, 16...) in the columns of a 10x5 array for some future simulation.\n",
-    "\n",
-    "HEREHRHEH"
+    " `for` loops is used to go through the rows or columns of an array (or both!). You can also repeating some operation on each element in an array. Let's say we need to put the numbers of the binary sequence (2, 4, 8, 16...) in the columns of a 10x5 array for some future simulation.\n"
    ]
   },
   {
@@ -699,13 +700,13 @@
    ],
    "source": [
     "# how to go through the rows or columns of an array to repeat some operation on each one (example, we need to put the numbers of the binary sequence in the columns of a 10 x 5 array)\n",
-    "anArray[:,0] = 2 # the zero is the index of the array \n",
-    "anArray[:,1] = 4\n",
+    "anArray[:,0] = 2 # the zero is the index of the array, at index 0, the value of the element is 2.\n",
+    "anArray[:,1] = 4 \n",
     "anArray[:,2] = 8\n",
     "anArray[:,3] = 16\n",
     "anArray[:,4] = 32\n",
     "\n",
-    "print (anArray)"
+    "print (anArray)#this array will have these elements (2,4..) with 10 rows and 5 columns"
    ]
   },
   {
@@ -726,6 +727,14 @@
    "metadata": {},
    "source": [
     "Now let's do this a cleaner and much more scalable way using a `for` loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f13ae02",
+   "metadata": {},
+   "source": [
+    "# Using a For loop to make an array"
    ]
   },
   {
@@ -759,7 +768,12 @@
     "myArraySize = (nRows, nCols)    # we'll make a 10x5 array. Rows always come first!\n",
     "ourNumbers = [2, 4, 8, 16, 32]  # numbers that we'll set each column to\n",
     "anArray = np.zeros(myArraySize) # make an array to hold our numbers. # what is np.zeros: it is an empty array to initialize our array so that we can hold data on it, and why do we have anArraySize?\n",
-    "\n",
+    "#steps: \n",
+    "#1. determine the size of the array \n",
+    "   # -nrows , ncols = \n",
+    "    #myArraysize = (nRows, nCols)\n",
+    "#2. set elements for each dimension \n",
+    "#3. anArray = np.zeros(myArraySize)\n",
     "for i in range(nCols) :\n",
     "    anArray[:,i] = ourNumbers[i]\n",
     "    \n",
@@ -851,7 +865,7 @@
    "source": [
     "ourNumbers = list()                # Make an empty Python list\n",
     "for i in range(nCols) :\n",
-    "    thisNumber = 2**(i+1)          # compute 2 to the right power #Don't understand this code. \n",
+    "    thisNumber = 2**(i+1)          # compute 2 to the right power \n",
     "    ourNumbers.append(thisNumber)  # and append it to our list \n",
     "ourNumbers"
    ]
@@ -1073,7 +1087,9 @@
     "    count += 1 \n",
     "    a = b \n",
     "    b = sum \n",
-    "    sum = a + b \n"
+    "    sum = a + b \n",
+    "\n",
+    "    \n"
    ]
   },
   {
