--- a/tutorial013-Numpy-Advanced-GeneratingData.ipynb
+++ b/tutorial013-Numpy-Advanced-GeneratingData.ipynb
@@ -29,7 +29,7 @@
    "id": "51a8a963",
    "metadata": {},
    "source": [
-    "In previous tutorials, we have mostly focussed on operations using small `lists` or `arrays`, with only a few dozens of observations. In general, when handling data in the real world, arrays and lists are larger (hundreds to thousands of observations).\n",
+    "In previous tutorials, we have mostly focused on operations using small `lists` or `arrays`, with only a few dozens of observations. In general, when handling data in the real world, arrays and lists are larger (hundreds to thousands of observations).\n",
     "\n",
     "In this tutorial we will learn how to think about data and how to use `numpy` to create data that respects some properties of an underlying data set."
    ]
