--- a/tutorial014-Numpy-CreatingPythongFunctions.ipynb
+++ b/tutorial014-Numpy-CreatingPythongFunctions.ipynb
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3c71e81a",
+   "id": "59f42133",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7ebf408f",
+   "id": "33ace6a5",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6ebbf87f",
+   "id": "3e3172bc",
    "metadata": {},
    "outputs": [
     {
@@ -1294,13 +1294,13 @@
     }
    ],
    "source": [
-    "my_spiffy_plotting_func(my_x, y_lin, y_quad, y_cube, y_quart, plt.style.use('fivethirtyeight') )"
+    "my_spiffy_plotting_func(my_x, y_lin, y_quad, y_cube, y_quart, plt.style.use('fivethirtyeight') ) #We could add additional parameters to allow us to variate the font style everytime we call the function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d26ec9",
+   "id": "ed88129e",
    "metadata": {},
    "outputs": [],
    "source": []
