--- a/tutorial015-Pandas-Introduction.ipynb
+++ b/tutorial015-Pandas-Introduction.ipynb
@@ -2007,10 +2007,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "5634fa7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Subject One</th>\n",
+       "      <th>Subject Two</th>\n",
+       "      <th>Subject Three</th>\n",
+       "      <th>Subject Four</th>\n",
+       "      <th>Subject Five</th>\n",
+       "      <th>Subject Six</th>\n",
+       "      <th>Subject Seven</th>\n",
+       "      <th>Subject Eight</th>\n",
+       "      <th>Subject Nine</th>\n",
+       "      <th>Subject Ten</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Blood Oxygenation (% 95 and higher)</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blood Oxygenation (%)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blood Oxygenation(%)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blood Pulsation Rate (bpm 60-100)</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blood Pulsation Rate(bpm)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>89.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cortical Thickness (mm, approx 2.5)</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cortical Thickness(mm)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neuronal Activity(mM 10-12)</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neuronal Activity(mM)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Subject One  Subject Two  Subject Three  \\\n",
+       "Blood Oxygenation (% 95 and higher)         95.0          NaN            NaN   \n",
+       "Blood Oxygenation (%)                        NaN        100.0            NaN   \n",
+       "Blood Oxygenation(%)                         NaN          NaN           94.0   \n",
+       "Blood Pulsation Rate (bpm 60-100)           68.0          NaN            NaN   \n",
+       "Blood Pulsation Rate(bpm)                    NaN         92.0           69.0   \n",
+       "Cortical Thickness (mm, approx 2.5)          2.5          NaN            NaN   \n",
+       "Cortical Thickness(mm)                       NaN          2.9            2.5   \n",
+       "Neuronal Activity(mM 10-12)                 10.0          NaN            NaN   \n",
+       "Neuronal Activity(mM)                        NaN         12.0           11.0   \n",
+       "\n",
+       "                                     Subject Four  Subject Five  Subject Six  \\\n",
+       "Blood Oxygenation (% 95 and higher)           NaN           NaN          NaN   \n",
+       "Blood Oxygenation (%)                         NaN           NaN          NaN   \n",
+       "Blood Oxygenation(%)                         93.0          99.0        100.0   \n",
+       "Blood Pulsation Rate (bpm 60-100)             NaN           NaN          NaN   \n",
+       "Blood Pulsation Rate(bpm)                    84.0          79.0         65.0   \n",
+       "Cortical Thickness (mm, approx 2.5)           NaN           NaN          NaN   \n",
+       "Cortical Thickness(mm)                        2.7           3.1          2.8   \n",
+       "Neuronal Activity(mM 10-12)                   NaN           NaN          NaN   \n",
+       "Neuronal Activity(mM)                        12.0          15.0         10.0   \n",
+       "\n",
+       "                                     Subject Seven  Subject Eight  \\\n",
+       "Blood Oxygenation (% 95 and higher)            NaN            NaN   \n",
+       "Blood Oxygenation (%)                          NaN            NaN   \n",
+       "Blood Oxygenation(%)                          91.0           83.0   \n",
+       "Blood Pulsation Rate (bpm 60-100)              NaN            NaN   \n",
+       "Blood Pulsation Rate(bpm)                     59.0           84.0   \n",
+       "Cortical Thickness (mm, approx 2.5)            NaN            NaN   \n",
+       "Cortical Thickness(mm)                         2.3            2.5   \n",
+       "Neuronal Activity(mM 10-12)                    NaN            NaN   \n",
+       "Neuronal Activity(mM)                          8.0           11.0   \n",
+       "\n",
+       "                                     Subject Nine  Subject Ten  \n",
+       "Blood Oxygenation (% 95 and higher)           NaN          NaN  \n",
+       "Blood Oxygenation (%)                         NaN          NaN  \n",
+       "Blood Oxygenation(%)                         98.0         76.0  \n",
+       "Blood Pulsation Rate (bpm 60-100)             NaN          NaN  \n",
+       "Blood Pulsation Rate(bpm)                    88.0         89.0  \n",
+       "Cortical Thickness (mm, approx 2.5)           NaN          NaN  \n",
+       "Cortical Thickness(mm)                        2.3          2.4  \n",
+       "Neuronal Activity(mM 10-12)                   NaN          NaN  \n",
+       "Neuronal Activity(mM)                        12.0         14.0  "
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subject1 = {'Neuronal Activity(mM 10-12)':10,\n",
     "'Blood Oxygenation (% 95 and higher)':95,\n",
@@ -2069,15 +2275,15 @@
     "\n",
     "subject9 = {'Neuronal Activity(mM)':12,\n",
     "'Blood Oxygenation(%)':98,\n",
-    "'Blood Pulsation Rate(bpm)':84,\n",
-    "'Cortical Thickness(mm)':2.7}\n",
+    "'Blood Pulsation Rate(bpm)':88,\n",
+    "'Cortical Thickness(mm)':2.3}\n",
     "series9 = pd.Series(subject9)\n",
     "\n",
     "\n",
-    "subject10 = {'Neuronal Activity':24,\n",
-    "'Blood Oxygenation':99,\n",
-    "'Blood Pulsation Rate':102,\n",
-    "'Cortical Thickness':3.5}\n",
+    "subject10 = {'Neuronal Activity(mM)':14,\n",
+    "'Blood Oxygenation(%)':76,\n",
+    "'Blood Pulsation Rate(bpm)':89,\n",
+    "'Cortical Thickness(mm)':2.4}\n",
     "series10 = pd.Series(subject10)\n",
     "\n",
     "\n",
