--- a/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial016-Pandas-DataWrangling.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "a6dee163",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "0e85ad68",
    "metadata": {},
    "outputs": [],
@@ -183,25 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "bae141a9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'read'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [45]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/__init__.py:261\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01marrays\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msparse\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SparseArray \u001b[38;5;28;01mas\u001b[39;00m _SparseArray\n\u001b[1;32m    259\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _SparseArray\n\u001b[0;32m--> 261\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpandas\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.read"
+    "data = pd.read_clipboard()"
    ]
   },
   {
@@ -550,118 +537,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "d0310f8c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Male Mutant</th>\n",
-       "      <th>Female Mutant</th>\n",
-       "      <th>Male Wild Type</th>\n",
-       "      <th>Female  Wild Type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>11.579094</td>\n",
-       "      <td>9.390892</td>\n",
-       "      <td>19.895356</td>\n",
-       "      <td>24.233268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.970163</td>\n",
-       "      <td>0.889904</td>\n",
-       "      <td>0.966323</td>\n",
-       "      <td>1.241408</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>10.367770</td>\n",
-       "      <td>8.250013</td>\n",
-       "      <td>18.074795</td>\n",
-       "      <td>22.607487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>10.960681</td>\n",
-       "      <td>8.622278</td>\n",
-       "      <td>19.561394</td>\n",
-       "      <td>23.132318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>11.515251</td>\n",
-       "      <td>9.458141</td>\n",
-       "      <td>20.139792</td>\n",
-       "      <td>24.227687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>11.735566</td>\n",
-       "      <td>9.802902</td>\n",
-       "      <td>20.356975</td>\n",
-       "      <td>25.297194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>13.412580</td>\n",
-       "      <td>10.892394</td>\n",
-       "      <td>21.215148</td>\n",
-       "      <td>25.946384</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Male Mutant  Female Mutant  Male Wild Type  Female  Wild Type\n",
-       "count    10.000000      10.000000       10.000000          10.000000\n",
-       "mean     11.579094       9.390892       19.895356          24.233268\n",
-       "std       0.970163       0.889904        0.966323           1.241408\n",
-       "min      10.367770       8.250013       18.074795          22.607487\n",
-       "25%      10.960681       8.622278       19.561394          23.132318\n",
-       "50%      11.515251       9.458141       20.139792          24.227687\n",
-       "75%      11.735566       9.802902       20.356975          25.297194\n",
-       "max      13.412580      10.892394       21.215148          25.946384"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'type' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m series \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSeries\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.63\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.85\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.98\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39mdescribe(series)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'type' object is not subscriptable"
+     ]
     }
    ],
    "source": [
-    "series = [0.63, 0.85, 0.98]\n",
-    "df.describe()"
+    "series = pd.Series[0.63, 0.85, 0.98]\n",
+    "df.describe(series)"
    ]
   },
   {
@@ -700,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "32526450",
    "metadata": {},
    "outputs": [
@@ -720,7 +614,7 @@
        "Name: Male Mutant, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "d5ea4e75",
    "metadata": {},
    "outputs": [
@@ -761,7 +655,7 @@
        "Name: Male Wild Type, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "adfeeed6",
    "metadata": {},
    "outputs": [],
@@ -797,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "42282201",
    "metadata": {},
    "outputs": [
@@ -822,260 +716,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Data</th>\n",
-       "      <th>Sex</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10.485451</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11.747948</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13.412580</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12.910095</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10.367770</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>11.698422</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>11.583153</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>11.447349</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>10.852276</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>11.285897</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>8.250013</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>8.453839</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>9.706605</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>9.522116</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>8.583212</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>9.835002</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>10.532096</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>9.394166</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>8.739473</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>10.892394</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20.127063</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>20.068147</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>21.215148</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>20.706416</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>18.074795</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>20.367624</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>20.152521</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>19.392476</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>18.524341</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>20.325026</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>25.946384</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>23.464870</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>22.989480</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>25.324376</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>22.607487</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>23.052187</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>25.369037</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>23.372709</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>25.215646</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>24.990505</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Data Sex\n",
-       "0   10.485451   M\n",
-       "1   11.747948   M\n",
-       "2   13.412580   M\n",
-       "3   12.910095   M\n",
-       "4   10.367770   M\n",
-       "5   11.698422   M\n",
-       "6   11.583153   M\n",
-       "7   11.447349   M\n",
-       "8   10.852276   M\n",
-       "9   11.285897   M\n",
-       "10   8.250013   F\n",
-       "11   8.453839   F\n",
-       "12   9.706605   F\n",
-       "13   9.522116   F\n",
-       "14   8.583212   F\n",
-       "15   9.835002   F\n",
-       "16  10.532096   F\n",
-       "17   9.394166   F\n",
-       "18   8.739473   F\n",
-       "19  10.892394   F\n",
-       "20  20.127063   M\n",
-       "21  20.068147   M\n",
-       "22  21.215148   M\n",
-       "23  20.706416   M\n",
-       "24  18.074795   M\n",
-       "25  20.367624   M\n",
-       "26  20.152521   M\n",
-       "27  19.392476   M\n",
-       "28  18.524341   M\n",
-       "29  20.325026   M\n",
-       "30  25.946384   F\n",
-       "31  23.464870   F\n",
-       "32  22.989480   F\n",
-       "33  25.324376   F\n",
-       "34  22.607487   F\n",
-       "35  23.052187   F\n",
-       "36  25.369037   F\n",
-       "37  23.372709   F\n",
-       "38  25.215646   F\n",
-       "39  24.990505   F"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "d1699d1f",
    "metadata": {},
    "outputs": [],
