--- a/tutorial013-Numpy-Advanced-GeneratingData.ipynb
+++ b/tutorial013-Numpy-Advanced-GeneratingData.ipynb
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 137,
    "id": "b862ee4b",
    "metadata": {},
    "outputs": [
@@ -1765,13 +1765,13 @@
     },
     {
      "ename": "NameError",
-     "evalue": "name 'x_variable' is not defined",
+     "evalue": "name 'y_linear' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [136]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDONE Plotting datasets!\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39msubplot(\u001b[38;5;241m221\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mx_variable\u001b[49m, y_variable_linear, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPlot One\u001b[39m\u001b[38;5;124m'\u001b[39m);\n\u001b[1;32m     22\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx axis\u001b[39m\u001b[38;5;124m'\u001b[39m, fontsize \u001b[38;5;241m=\u001b[39m axisLabelSize);\n\u001b[1;32m     23\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my axis\u001b[39m\u001b[38;5;124m'\u001b[39m, fontsize \u001b[38;5;241m=\u001b[39m axisLabelSize);\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x_variable' is not defined"
+      "Input \u001b[0;32mIn [137]\u001b[0m, in \u001b[0;36m<cell line: 21>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDONE Plotting datasets!\u001b[39m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39msubplot(\u001b[38;5;241m221\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(x, \u001b[43my_linear\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPlot One\u001b[39m\u001b[38;5;124m'\u001b[39m);\n\u001b[1;32m     22\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx axis\u001b[39m\u001b[38;5;124m'\u001b[39m, fontsize \u001b[38;5;241m=\u001b[39m axisLabelSize);\n\u001b[1;32m     23\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my axis\u001b[39m\u001b[38;5;124m'\u001b[39m, fontsize \u001b[38;5;241m=\u001b[39m axisLabelSize);\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_linear' is not defined"
      ]
     },
     {
@@ -1791,7 +1791,7 @@
     "fig, axs = plt.subplots(ncols=2, nrows=4, figsize=(7, 7))\n",
     "x_mu = 180\n",
     "y_mu = 170\n",
-    "while counter < n_datasets:\n",
+    "while counter < n_datasets :\n",
     "    data = multivariate_normal([x_mu, y_mu], \n",
     "                               cov_m, \n",
     "                               size=siz_datasets)\n",
@@ -1808,25 +1808,25 @@
     "    print(\"DONE Plotting datasets!\") \n",
     "\n",
     "plt.subplot(221)\n",
-    "plt.plot(x_v, y_variable_linear, 'r', label = 'Plot One');\n",
+    "plt.plot(x, y_linear, 'r', label = 'Plot One');\n",
     "plt.xlabel('x axis', fontsize = axisLabelSize);\n",
     "plt.ylabel('y axis', fontsize = axisLabelSize);\n",
     "plt.title('Plot One', fontsize = titleSize);\n",
     "\n",
     "plt.subplot(222)\n",
-    "plt.plot(x_variable, y_variable_squared, 'g', label = 'Plot Two');\n",
+    "plt.plot(x_variable, y_squared, 'g', label = 'Plot Two');\n",
     "plt.xlabel('x axis', fontsize = axisLabelSize);\n",
     "plt.ylabel('y axis', fontsize = axisLabelSize);\n",
     "plt.title('Plot Two', fontsize = titleSize);\n",
     "\n",
     "plt.subplot(223)\n",
-    "plt.plot(x_variable, y_variable_cubed, 'b', label = 'Plot Three');\n",
+    "plt.plot(x_variable, y_cubed, 'b', label = 'Plot Three');\n",
     "plt.xlabel('x axis', fontsize = axisLabelSize);\n",
     "plt.ylabel('y axis', fontsize = axisLabelSize);\n",
     "plt.title('Plot Three', fontsize = titleSize);\n",
     "\n",
     "plt.subplot(224)\n",
-    "plt.plot(x_variable, y_variable_quart, 'y', label = 'Plot Four');\n",
+    "plt.plot(x_variable, y_quart, 'y', label = 'Plot Four');\n",
     "plt.xlabel('x axis', fontsize = axisLabelSize);\n",
     "plt.ylabel('y axis', fontsize = axisLabelSize);\n",
     "plt.title('Plot Four', fontsize = titleSize);\n",
@@ -1845,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "931a4c5a",
+   "id": "11a3ff6d",
    "metadata": {},
    "outputs": [],
    "source": []
